--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 directories = "4.0.1"
 toml = "0.5.9"
 comrak = "0.15"
+regex = "1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
