--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,9 @@ toml = "0.5.9"
 comrak = "0.15"
 regex = "1"
 lazy_static = "1.4.0"
+rusqlite = { version = "0.29.0", features = ["bundled", "trace"] }
+log = "0.4"
+env_logger = "0.9.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
