--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@sveltejs/svelte-virtual-list": "^3.0.1",
     "@tauri-apps/api": "^1.2.0",
     "json2toml": "^4.0.1",
     "showdown": "^2.1.0",
